package com.example.myapplication.models;

public class Usuario {
}
