@startuml review_app
entity foto_perfil {
	id: bigint <<PK>>
	caminho_arquivo: string
	created_at: datetime
	updated_at: datetime
}

entity usuario {
	id: bigint <<PK>>
	nome: string
	email: string
	senha: string
	created_at: datetime
	updated_at: datetime
	deleted_at: datetime
	id_foto_perfil: bigint <<FK>>
}

entity obra {
	id: bigint <<PK>>
	id_externo: bigint
	id_tipo: int
	created_at: datetime
	updated_at: datetime
	deleted_at: datetime
}

entity avaliacao {
	id: bigint <<PK>>
	nota: int
	comentario: text
	created_at: datetime
	updated_at: datetime
	id_usuario: bigint <<FK>>
	id_obra: bigint <<FK>>
}

entity favoritos {
	id: bigint <<PK>>
	created_at: datetime
	updated_at: datetime
	id_usuario: bigint <<FK>>
	id_obra: bigint <<FK>>
}

entity avaliacao_curtida {
	id: bigint <<PK>>
	created_at: datetime
	updated_at: datetime
	id_usuario: bigint <<FK>>
	id_avaliacao: bigint <<FK>>
}

usuario "1..0" -- "n..0" foto_perfil
usuario "1..0" -- "1..1" favoritos
favoritos "n..1" -- "n..0" obra
avaliacao "1..1" -- "n..0" obra
usuario "n..1" -- "n..0" avaliacao
avaliacao_curtida "1..1" -- "n..0" avaliacao
usuario "n..0" -- "1..1" avaliacao_curtida

@enduml